syntax = "proto3";

package merkle_tree_proto;

message MerkleTreeNode {
    bytes node = 1;
    uint32 index = 2;
}

message MerkleTreeLayer {
    repeated MerkleTreeNode nodes = 1;
}

message MerkleTree {
    repeated MerkleTreeLayer layers = 1;
}

