syntax = "proto3";

message ERC20TransferEvent {
    bytes from = 1;
    bytes to = 2;
    bytes value = 3;
    uint32 logIndex = 4;
    uint32 transactionIndex = 5;
    uint64 blockNumber = 6;
}

